tests/unit/language/errors/slice_to_sized_param_rejected.arche
// Sizing flows ONE way: a sized `T[N]` decays to a `T[]` slice, never the reverse. A slice's length is
// only known at runtime, so handing it to a sized `T[N]` param (which assumes exactly N and could
// over-read) is rejected at compile time.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "slice .T\[\]. to a sized" %t.out
#import { fmt }
needs_sized :: func(xs: [4]int) -> int {
  return xs[0];
}

forward :: func(xs: []int) -> int {
  return needs_sized(xs);
}

main :: proc() {
  a: [4]int;
  fmt.printf("%d\n", forward(a));
}